Update all project files

--- a/registration/templates/password_reset_email.html
+++ b/registration/templates/password_reset_email.html
@@ -1,15 +1,27 @@
-{% autoescape off %}
-Hi {{ user.username }},
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>POTRAZ Registration Approved</title>
+</head>
+<body style="font-family: Arial, sans-serif; color: #333;">
+    <h2>🎉 Congratulations, {{ user.get_full_name|default:registration.organization_name }}!</h2>
 
- Your registration with POTRAZ has been approved!
+    <p>Your registration with POTRAZ has been <strong>approved</strong>.</p>
 
-Please set your password using the link below:
+    <p>You may now access the system and its services. To begin, please click the link below to set your password:</p>
 
-🔐 Reset your password:
-{{ protocol }}://{{ domain }}/reset/{{ uid }}/{{ token }}/
+    <p>
+        <a href="http://127.0.0.1:8000/reset/{{ uid }}/{{ token }}/" style="background-color: #007BFF; color: white; padding: 10px 15px; text-decoration: none; border-radius: 5px;">Set Your Password</a>
+    </p>
 
-This link will expire after some time for security.
+    <p>This link is valid for a limited time. Please complete the process as soon as possible.</p>
 
-Best regards,  
-POTRAZ Team
-{% endautoescape %}
+    <p>If you have any questions, contact us at <a href="mailto:support@potraz.gov.zw">support@potraz.gov.zw</a>.</p>
+
+    <p>Best regards,<br>
+    POTRAZ Registration Team<br>
+    <a href="https://www.potraz.gov.zw">www.potraz.gov.zw</a></p>
+</body>
+</html>
+
